--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,17 @@
 /node_modules
+/storage/public
+/storage/logs
+/storage/app
+/storage/framework/*.*
 /public/hot
+/public/js
+/public/css
+/public/theme
+/public/images
 /public/storage
 /storage/*.key
 /vendor
+.idea
 .env
 .env.backup
 .phpunit.result.cache
@@ -10,3 +19,10 @@ Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
+package-lock.json
+.env
+access.log
+error.log
+public/mix-manifest.json
+composer.lock
+package-lock.json
