--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -3,12 +3,19 @@
     "/js/admin/manage_book.js": "/js/admin/manage_book.js?id=9f621eb3895272ca89c3",
     "/js/admin/manage_show_data.js": "/js/admin/manage_show_data.js?id=a7cef0ba6f46f9cbe54a",
     "/js/admin/manage_user.js": "/js/admin/manage_user.js?id=717f5d11ae863f71b7f2",
-    "/js/app.js": "/js/app.js?id=1b07f1a87ffc58f205da",
+    "/js/admin/welcome.js": "/js/admin/welcome.js?id=f904051aaa6f6a2c7868",
+    "/js/app.js": "/js/app.js?id=8d641732d23a9fa345f4",
     "/css/app.css": "/css/app.css?id=9a73419a33490fbaf7a1",
+    "/css/contact.welcome.css": "/css/contact.welcome.css?id=24d95a0bf6ce29c7aa87",
+    "/css/content.welcome.css": "/css/content.welcome.css?id=849e4e406ad7a9fa76d8",
+    "/css/footer.welcome.css": "/css/footer.welcome.css?id=92f7838736f589051ab0",
     "/css/header.css": "/css/header.css?id=aed5476f760838e06cef",
     "/css/manage.book.css": "/css/manage.book.css?id=670878fb4fe5bf1e7900",
     "/css/manage.data.css": "/css/manage.data.css?id=185759b2f42b449ec487",
     "/css/manage.user.css": "/css/manage.user.css?id=48f1dcac1a65e0e95f3e",
-    "/css/navbar.admin.css": "/css/navbar.admin.css?id=b9656b59f0ccc1b623c5",
+    "/css/navbar,admin.css": "/css/navbar,admin.css?id=b9656b59f0ccc1b623c5",
+    "/css/navbar.welcome.css": "/css/navbar.welcome.css?id=271becffa10483409399",
+    "/css/slider.welcome.css": "/css/slider.welcome.css?id=aade12e1c014b65db855",
+    "/css/welcome.css": "/css/welcome.css?id=192238c1824907149ee0",
     "/css/_variables.css": "/css/_variables.css?id=d41d8cd98f00b204e980"
 }
