--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,20 +1,22 @@
 {
-    "/js/admin/layouts.js": "/js/admin/layouts.js?id=308fbf2bc952ca357109",
-    "/js/admin/manage_book.js": "/js/admin/manage_book.js?id=9f621eb3895272ca89c3",
-    "/js/admin/manage_show_data.js": "/js/admin/manage_show_data.js?id=a7cef0ba6f46f9cbe54a",
-    "/js/admin/manage_user.js": "/js/admin/manage_user.js?id=717f5d11ae863f71b7f2",
-    "/js/admin/welcome.js": "/js/admin/welcome.js?id=f904051aaa6f6a2c7868",
-    "/js/app.js": "/js/app.js?id=cf5e3593ab38f2c48f3a",
-    "/css/app.css": "/css/app.css?id=9a73419a33490fbaf7a1",
+    "/js/admin/layouts.js": "/js/admin/layouts.js?id=622ca154375ab593163e",
+    "/js/admin/manage_book.js": "/js/admin/manage_book.js?id=1e2a995e7bae9d7d7247",
+    "/js/admin/manage_show_data.js": "/js/admin/manage_show_data.js?id=caad619229a47499b902",
+    "/js/admin/manage_user.js": "/js/admin/manage_user.js?id=e12e17a55fb01c0a24b5",
+    "/js/admin/welcome.js": "/js/admin/welcome.js?id=6f360ef93f71eca27762",
+    "/js/app.js": "/js/app.js?id=eabc369742f96a981fae",
+    "/css/app.css": "/css/app.css?id=9ecc2bff32ac1b66cfdf",
     "/css/contact.welcome.css": "/css/contact.welcome.css?id=24d95a0bf6ce29c7aa87",
     "/css/content.welcome.css": "/css/content.welcome.css?id=1fb3a6c44e03311d4973",
     "/css/footer.welcome.css": "/css/footer.welcome.css?id=710f53fcbddacbc6d140",
     "/css/header.css": "/css/header.css?id=83204e73b6a133031842",
     "/css/manage.book.css": "/css/manage.book.css?id=7bb799d4b0aed90363ee",
-    "/css/manage.data.css": "/css/manage.data.css?id=e505c8e589025418ee95",
+    "/css/manage.data.css": "/css/manage.data.css?id=fecd7657ffa31342b982",
+    "/css/manage.list.book.css": "/css/manage.list.book.css?id=8eedaab6e35a93f659e5",
     "/css/manage.user.css": "/css/manage.user.css?id=48f1dcac1a65e0e95f3e",
     "/css/navbar.admin.css": "/css/navbar.admin.css?id=c4dccd7044916b82eb27",
     "/css/navbar.welcome.css": "/css/navbar.welcome.css?id=fc111f548847ebe15ce3",
+    "/css/showlistbook.css": "/css/showlistbook.css?id=8eedaab6e35a93f659e5",
     "/css/slider.welcome.css": "/css/slider.welcome.css?id=ccac272622d81cfb3b55",
     "/css/welcome.css": "/css/welcome.css?id=192238c1824907149ee0",
     "/css/_variables.css": "/css/_variables.css?id=d41d8cd98f00b204e980"
