complete-edit-book

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,22 +1,29 @@
 {
-    "/js/admin/layouts.js": "/js/admin/layouts.js?id=622ca154375ab593163e",
-    "/js/admin/manage_book.js": "/js/admin/manage_book.js?id=1e2a995e7bae9d7d7247",
-    "/js/admin/manage_show_data.js": "/js/admin/manage_show_data.js?id=caad619229a47499b902",
-    "/js/admin/manage_user.js": "/js/admin/manage_user.js?id=e12e17a55fb01c0a24b5",
-    "/js/admin/welcome.js": "/js/admin/welcome.js?id=14c309c0fe414d96baf0",
-    "/js/app.js": "/js/app.js?id=c020b72c018ccba17b27",
-    "/css/app.css": "/css/app.css?id=08c0dc49c44cc906987f",
-    "/css/contact.welcome.css": "/css/contact.welcome.css?id=24d95a0bf6ce29c7aa87",
-    "/css/content.welcome.css": "/css/content.welcome.css?id=1fb3a6c44e03311d4973",
-    "/css/footer.welcome.css": "/css/footer.welcome.css?id=710f53fcbddacbc6d140",
+    "/js/admin/book_interface.js": "/js/admin/book_interface.js?id=600c791c20a0bda4b79c",
+    "/js/admin/layouts.js": "/js/admin/layouts.js?id=bcaa6910729bd553c653",
+    "/js/admin/manage_book.js": "/js/admin/manage_book.js?id=7c03e8b8110c71f2b5c6",
+    "/js/admin/manage_order.js": "/js/admin/manage_order.js?id=d7ba809e19e1261e6770",
+    "/js/admin/manage_show_data.js": "/js/admin/manage_show_data.js?id=05a8144009c71eae4165",
+    "/js/admin/manage_user.js": "/js/admin/manage_user.js?id=65fc4b48adeb3a0b5cc9",
+    "/js/admin/welcome.js": "/js/admin/welcome.js?id=5d5c315abb2706de9f69",
+    "/js/app.js": "/js/app.js?id=0b6f5bfa796afeecca1b",
+    "/css/app.css": "/css/app.css?id=fd4aba74dfd65029e945",
+    "/css/book_interface.css": "/css/book_interface.css?id=5662fd42f0bcf2d98561",
+    "/css/cart.css": "/css/cart.css?id=7cc32ef38d5a335e259a",
+    "/css/contact.welcome.css": "/css/contact.welcome.css?id=94ad3cf8a007a2a0beb6",
+    "/css/content.book.css": "/css/content.book.css?id=5f1285f36c5f33e69de9",
+    "/css/content.welcome.css": "/css/content.welcome.css?id=2076b5d157f3fbf222bc",
+    "/css/footer.welcome.css": "/css/footer.welcome.css?id=e15377a82bf0beedba5a",
     "/css/header.css": "/css/header.css?id=83204e73b6a133031842",
-    "/css/manage.book.css": "/css/manage.book.css?id=7bb799d4b0aed90363ee",
-    "/css/manage.data.css": "/css/manage.data.css?id=1559aa9da50e7a6f1478",
-    "/css/manage.list.book.css": "/css/manage.list.book.css?id=6b0bc6565abefc009baa",
+    "/css/manage.book.css": "/css/manage.book.css?id=6868d0306e2409f9ab8e",
+    "/css/manage.data.css": "/css/manage.data.css?id=35f0f0b21abf563b1d5b",
+    "/css/manage.list.book.css": "/css/manage.list.book.css?id=10f1a2af25b330284aa4",
+    "/css/manage.orderAdmin.css": "/css/manage.orderAdmin.css?id=4a0320619937aea1a3cf",
     "/css/manage.user.css": "/css/manage.user.css?id=48f1dcac1a65e0e95f3e",
-    "/css/navbar.admin.css": "/css/navbar.admin.css?id=c4dccd7044916b82eb27",
-    "/css/navbar.welcome.css": "/css/navbar.welcome.css?id=77587556d3027828ed75",
-    "/css/slider.welcome.css": "/css/slider.welcome.css?id=a06a5dda7d881759430e",
-    "/css/welcome.css": "/css/welcome.css?id=7f23e073d605fb152703",
+    "/css/navbar.admin.css": "/css/navbar.admin.css?id=13db8d3ac8286d8dd0e0",
+    "/css/navbar.book.css": "/css/navbar.book.css?id=8a08c36acd6f48e2bf52",
+    "/css/navbar.welcome.css": "/css/navbar.welcome.css?id=cb1a356e0452f1afa703",
+    "/css/slider.welcome.css": "/css/slider.welcome.css?id=73f0775fdbf74065fecc",
+    "/css/welcome.css": "/css/welcome.css?id=fb7e49323c1239ef0703",
     "/css/_variables.css": "/css/_variables.css?id=d41d8cd98f00b204e980"
 }
